--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@
 
 body{
     display: flex;
+    width: 100%;
     background-color: var(--colorFondoChat);
     color: var(--colorLetras);
     font-weight:var(--medium-xl);
@@ -30,27 +31,30 @@ header{
     color: white;
     justify-content: space-around;
     align-items: center;
+    padding: 1rem
 }
 
 nav{
     grid-area: nav;
+    width: 100%;
     display: flex;
     flex-direction: column;
     background-color: var(--colorFondoChat);
     color: var(--colorLetras);
     font-weight: bold;
-    padding: 0 1.5rem;
-    margin-top: 20px;
+    margin: 20px;
 }
 
 main{
     grid-area: main;
+    width: 100%;
     background-color: var(--colorFondoChat);
     margin: 20px;
 }
 
 footer{
     grid-area: footer;
+    width: 100%;
     background-color: var(--azul);
     color: var(--white);
     text-align: center;
@@ -102,7 +106,13 @@ nav .items:hover{
 
 .card:hover{
     transform: scale(1.1);
-    transition: 0.6S;
+    transition: ease-in 0.6S;
+    color: var(--rojo);
+}
+
+.card:not(hover){
+    
+    transition: ease-in 0.6S;
     color: var(--rojo);
 }
 
@@ -128,9 +138,10 @@ nav .items:hover{
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    
     gap: 1.5rem;
     justify-items: center;
-    margin: 5px;
+    margin: 10px;
 }
 
 .venta h1{
